# computer_vision_exam

./: .gitignore  main.py  project.ipynb  pyproject.toml
exports/models/: class_indices.npy
streamlit/: app.py
