[project]
name = "computer-vision-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "kagglehub>=0.3.13",
    "keras>=3.11.3",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "tensorflow>=2.20.0",
    "torch>=2.9.0",
    "ultralytics>=8.3.220",
]
